--- a/playbook.yml
+++ b/playbook.yml
@@ -7,6 +7,11 @@
   gather_facts: no
   tasks:
 
+    - name: Add unetbootin repository into sources list
+      apt_repository:
+        repo: ppa:gezakovacs/ppa
+        state: present
+
     - name: Update apt
       apt:
         update_cache: yes
