--- a/playbook-docker.yml
+++ b/playbook-docker.yml
@@ -32,11 +32,15 @@
           - lsb-release
         state: latest
 
+    - name: Add docker gpg apt key
+      apt_key:
+       url: https://download.docker.com/linux/ubuntu/gpg
+       state: present
+
     - name: Add docker repository
-      shell: |
-        echo \
-        "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
-        $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
+      apt_repository:
+       repo: "deb https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+       state: present
 
     - name: Update apt
       apt:
