--- a/my.inventory.example
+++ b/my.inventory.example
@@ -4,6 +4,9 @@
 [docker]
 127.0.0.1
 
+[golang]
+127.0.0.1 golang_version="1.17.5"
+
 [samba]
 127.0.0.1 samba_networks='["192.168.1.0","10.0.0.0"]'
 
