--- a/playbook-golang.yml
+++ b/playbook-golang.yml
@@ -10,58 +10,35 @@
     golang_home: "/home/{{ golang_user }}"
   tasks:
 
-    - name: Define variables
-      set_fact:
-        golang_version: "{{ golang_version | default('1.17.5') }}"
-
-    - name: Debug
-      debug: 
-        msg:
-        - "User: {{ golang_user }}"
-        - "Home: {{ golang_home }}"
-        - "Version: {{ golang_version }}"
-
-    - name: Download golang {{ golang_version }}
-      get_url:
-        url: https://go.dev/dl/go{{ golang_version }}.linux-amd64.tar.gz
-        dest: /tmp
-        mode: 0660
-
-    - name: Remove old installation
+    - name: Remove old installation from source
       file:
         path: /usr/local/go
         state: absent
 
-    - name: Extract archive /tmp/go{{ golang_version }}.linux-amd64.tar.gz
-      unarchive:
-        src: "/tmp/go{{ golang_version }}.linux-amd64.tar.gz"
-        dest: /usr/local
-        copy: no
+    - name: Add golang repository
+      apt_repository:
+        repo: ppa:longsleep/golang-backports
+        state: present
 
-    - name: Create Golang directories in the {{ golang_home }}
-      file:
-        path: "{{ item }}"
-        state: directory
-        recurse: yes
-        owner: "{{ golang_user }}"
-        group: "{{ golang_user }}"
-        mode: "0755"
-      loop:
-        - "{{ golang_home }}/go/bin"
-        - "{{ golang_home }}/go/src"
+    - name: Update apt
+      apt:
+        update_cache: yes
+        force_apt_get: yes
+        cache_valid_time: 3600
+
+    - name: Install golang
+      apt: 
+        name:
+          - golang-go
+        state: latest
 
     - name: Modify .bashrc in the {{ golang_home }}
       blockinfile:
         dest: "{{ golang_home }}/.bashrc"
         block: |
-          export GOPATH=$HOME/go
-          export GOBIN=$GOPATH/bin
-          export PATH=$PATH:$GOBIN:/usr/local/go/bin
+          export PATH=$PATH:{{ golang_home }}/go/bin
         marker: '# {mark} ANSIBLE MANAGED BLOCK - Golang'
         insertafter: EOF
         create: yes
+        state: present
 
-    - name: Remove installation archive
-      file:
-        path: /tmp/go{{ golang_version }}.linux-amd64.tar.gz
-        state: absent
