--- a/playbook-virtualbox.yml
+++ b/playbook-virtualbox.yml
@@ -5,23 +5,15 @@
   connection: local
   become: true
   gather_facts: yes
-  vars:
-    golang_user: "{{ ansible_facts['env']['SUDO_USER'] }}"
-    golang_home: "/home/{{ golang_user }}"
   tasks:
 
-    - name: Update apt
-      apt:
-        update_cache: yes
-        force_apt_get: yes
-        cache_valid_time: 3600
-
     - name: Install virtualbox
-      apt: 
-        name:
-          - virtualbox
-          - virtualbox-ext-pack
-        state: latest
+      expect:
+        command: apt-get install virtualbox virtualbox-ext-pack
+        responses:
+          Question:
+            - 'Y'
+            - 'n'
 
     - name: Add current user into vboxusers group
       shell: usermod -aG vboxusers `logname`
