add tigervnc viewer

--- a/playbook-common.yml
+++ b/playbook-common.yml
@@ -48,6 +48,7 @@
           - unetbootin
           - vokoscreen
           - wget
+          - tigervnc-viewer
         state: latest
 
     - name: Enabel ufw
