--- a/playbook-docker.yml
+++ b/playbook-docker.yml
@@ -5,6 +5,10 @@
   become: true
   tasks:
 
+    # - name: Debug message
+    #   debug:
+    #     msg: "{{ ansible_architecture }}"
+
     - name: Remove default docker packages
       apt: 
         name:
@@ -40,16 +44,6 @@
        repo: deb [arch=amd64] https://download.docker.com/{{ ansible_system | lower }}/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} stable
        state: present
 
-    - name: Add docker-ctop gpg apt key
-      apt_key:
-       url: https://azlux.fr/repo.gpg.key
-       state: present
-
-    - name: Add docker-ctop apt repository
-      apt_repository:
-       repo: deb http://packages.azlux.fr/debian/ buster main
-       state: present
-
     - name: Update apt
       apt:
         update_cache: yes
@@ -61,7 +55,7 @@
           - containerd.io
           - docker-ce
           - docker-ce-cli
-          - docker-ctop
+          # - docker-ctop
         state: latest
 
     - name: Create docker group
@@ -77,3 +71,10 @@
         url: https://github.com/docker/compose/releases/download/v2.1.1/docker-compose-{{ ansible_system | lower }}-{{ ansible_architecture }}
         dest: /usr/local/bin/docker-compose
         mode: '0755'
+
+    - name: Install docker-ctop
+      get_url:
+        url: https://github.com/bcicen/ctop/releases/download/v0.7.7/ctop-0.7.7-linux-amd64
+        dest: /usr/local/bin/ctop
+        mode: '0755'
+  
